Added a Picture of Me

--- a/about-me.html
+++ b/about-me.html
@@ -5,12 +5,13 @@
 		<title>Brian Pho</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<h1>About Me</h1>
 		<hr />
+		<img src="images/brianpho.jpg" alt="A picture of me" width="312" height="416" />
 		<p>I'm hosted with GitHub Pages.</p>
 		<address>
 			<!-- This is a link to my email -->
-			<p><a href-"mailto:brainic777@gmail.com">
+			<p><a href="mailto:brainic777@gmail.com">
 			brainic777@gmail.com</a></p>
 		</address>
 		<!-- Linking using absolute URL -->
