--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 	<head>
 		<!-- This is the title of the tab -->
 		<title>Brian Pho</title>
+		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho.">
+		<meta name="KEYWORDS" content="Brian Pho">
 	</head>
 	<body>
 		<h1>About Me</h1>
