Added CSS File and Reorganized Files

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,10 +3,8 @@
 	<head>
 		<!-- This is the title of the tab -->
 		<title>Brian Pho</title>
-		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho." />
-		<meta name="KEYWORDS" content="Brian Pho" />
-		<!-- Using external CSS -->
-		<link href="CSS/index.css" type="text/css" rel="stylesheet" />
+		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho.">
+		<meta name="KEYWORDS" content="Brian Pho">
 	</head>
 	<body>
 		<h1>About Me</h1>
@@ -23,10 +21,10 @@
 		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
 		<!-- Linking using relative URL -->
 		<p>
-			<a href="HTML/index.html">Home</a></li>
-			<a href="HTML/about-me.html">About</a></li>
-			<a href="HTML/gallery.html">Gallery</a></li>
-			<a href="HTML/contact.html">Contact</a></li>
+			<a href="index.html">Home</a></li>
+			<a href="about-me.html">About</a></li>
+			<a href="gallery.html">Gallery</a></li>
+			<a href="contact.html">Contact</a></li>
 		</p>
 	</body>
 </html>
