Added dummy index.html and Added Fonts

--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<img src="images/brianpho.jpg" alt-"A picture of me" width-"400" height-"400" />
+<img src="../images/brianpho.jpg" alt="A picture of me" width="312" height="416"/>
