--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,28 +3,29 @@
 	<head>
 		<!-- This is the title of the tab -->
 		<title>Brian Pho</title>
-		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho.">
-		<meta name="KEYWORDS" content="Brian Pho">
+		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho."/>
+		<meta name="KEYWORDS" content="Brian Pho"/>
+		<!-- Using external CSS -->
+		<link href="CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	</head>
 	<body>
-		<h1>About Me</h1>
-		<hr />
-		<img src="images/brianpho.jpg" alt="A picture of me" width="312" height="416" />
-		<p>I'm hosted with GitHub Pages.</p>
-		<address>
-			<!-- This is a link to my email -->
-			<p><a href="mailto:brainic777@gmail.com">
-			brainic777@gmail.com</a></p>
-		</address>
-		<!-- Linking using absolute URL -->
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
 		<!-- Linking using relative URL -->
-		<p>
+		<p class="pages">
 			<a href="index.html">Home</a></li>
-			<a href="about-me.html">About</a></li>
-			<a href="gallery.html">Gallery</a></li>
-			<a href="contact.html">Contact</a></li>
+			<a href="couses_taken.html">Courses Taken</a></li>
+			<a href="projects.html">Projects</a></li>
+			<a href="HTML/gallery.html">Gallery</a></li>
+			<a href="resume.html">Resume</a></li>
+			<a href="HTML/about.html">About</a></li>
+			<a href="HTML/contact.html">Contact</a></li>
+		</p>
+		<hr/>
+		<h1>Welcome to Brian Pho's Homepage</h1>
+		<p>
+			I am currently a software engineering student at the University of Calgary.
+			This website shows the past courses that I have taken as well as information
+			about me.
 		</p>
 	</body>
 </html>
