--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- This is the title of the tab -->
-		<title>Brian Pho</title>
-		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho." />
-		<meta name="KEYWORDS" content="Brian Pho" />
-		<!-- Using external CSS -->
-		<link href="CSS/index.css" type="text/css" rel="stylesheet" />
+		<meta http-equiv="refresh" content="0; url=http://repo.github.io/HTML/index.html" />
 	</head>
-	<body>
-		<h1>About Me</h1>
-		<hr />
-		<img src="images/brianpho.jpg" alt="A picture of me" width="312" height="416" />
-		<p>I'm hosted with GitHub Pages.</p>
-		<address>
-			<!-- This is a link to my email -->
-			<p><a href="mailto:brainic777@gmail.com">
-			brainic777@gmail.com</a></p>
-		</address>
-		<!-- Linking using absolute URL -->
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
-		<!-- Linking using relative URL -->
-		<p>
-			<a href="HTML/index.html">Home</a></li>
-			<a href="HTML/about-me.html">About</a></li>
-			<a href="HTML/gallery.html">Gallery</a></li>
-			<a href="HTML/contact.html">Contact</a></li>
-		</p>
-	</body>
 </html>
