--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,15 +5,20 @@
 		<title>Brian Pho</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
 		<hr />
-		<p>I'm hosted with GitHub Pages.</p>
 		<address>
 			<!-- This is a link to my email -->
-			<p><a href-"mailto:brainic777@gmail.com">
-			brainic777@gmail.com</a></p>
+			<p>
+				<a href="mailto:brainic777@gmail.com">
+				brainic777@gmail.com
+				</a>
+			</p>
 		</address>
+		<!-- Linking using absolute URL -->
+		<p>
+		<a href="https://www.facebook.com/BrianPho7">Facebook</a>
 		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
+		<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
+		</p>
 	</body>
 </html>
