Minor Edit to Dummy index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=http://repo.github.io/HTML/index.html" />
+		<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
 	</head>
 </html>
