Edited index.html Files

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
 		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho."/>
 		<meta name="KEYWORDS" content="Brian Pho"/>
 		<!-- Using external CSS -->
-		<link href="CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	</head>
 	<body>
@@ -15,10 +15,10 @@
 			<a href="index.html">Home</a></li>
 			<a href="couses_taken.html">Courses Taken</a></li>
 			<a href="projects.html">Projects</a></li>
-			<a href="HTML/gallery.html">Gallery</a></li>
+			<a href="gallery.html">Gallery</a></li>
 			<a href="resume.html">Resume</a></li>
-			<a href="HTML/about.html">About</a></li>
-			<a href="HTML/contact.html">Contact</a></li>
+			<a href="about.html">About</a></li>
+			<a href="contact.html">Contact</a></li>
 		</p>
 		<hr/>
 		<h1>Welcome to Brian Pho's Homepage</h1>
