--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
-	</head>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://bob.github.io/repo/</title>
+<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
+<link rel="canonical" href="https://bob.github.io/repo/">
