--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://brian-pho.github.io/HTML/index.html</title>
-<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
-<link rel="canonical" href="https://brian-pho.github.io/HTML/index.html">
+<head>
+	<meta charset="utf-8">
+	<title>Redirecting to https://brian-pho.github.io/HTML/index.html</title>
+	<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
+	<link rel="canonical" href="https://brian-pho.github.io/HTML/index.html">
+</head>
