--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
 		<!-- Linking using relative URL -->
 		<p class="pages">
 			<a href="index.html">Home</a></li>
-			<a href="couses_taken.html">Courses Taken</a></li>
+			<a href="couses.html">Courses</a></li>
 			<a href="projects.html">Projects</a></li>
 			<a href="gallery.html">Gallery</a></li>
 			<a href="resume.html">Resume</a></li>
@@ -24,7 +24,7 @@
 		<h1>Welcome to Brian Pho's Homepage</h1>
 		<p>
 			I am currently a software engineering student at the University of Calgary.
-			This website shows the past courses that I have taken as well as information
+			This website shows the past courses that I have taken, projects I have been involved with, and information
 			about me.
 		</p>
 	</body>
