--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Redirecting to https://brian-pho.github.io/HTML/index.html</title>
+	<!-- Use of dummy index file redirection -->
 	<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
 	<link rel="canonical" href="https://brian-pho.github.io/HTML/index.html">
 </head>
