Major Edits Including UI, Functionality, Colours

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -2,29 +2,26 @@
 <html>
 	<head>
 		<!-- This is the title of the tab -->
-		<title>Brian Pho</title>
-		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho.">
-		<meta name="KEYWORDS" content="Brian Pho">
+		<title>Brian Pho About</title>
+		<meta name="DESCRIPTION" content="This is information about Brian Pho."/>
+		<meta name="KEYWORDS" content="Brian Pho, about"/>
+		<!-- Using external CSS -->
+		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<!-- Linking using relative URL -->
+		<ul>
+				<li><a id="home" href="index.html">Home</a></li>
+				<li><a id="courses" href="couses.html">Courses</a></li>
+				<li><a id="projects" href="projects.html">Projects</a></li>
+				<li><a id="gallery" href="gallery.html">Gallery</a></li>
+				<li><a id="about" class="on" href="about.html">About</a></li>
+				<li><a id="contact" href="contact.html">Contact</a></li>
+		</ul>
 		<h1>About Me</h1>
-		<hr />
-		<img src="images/brianpho.jpg" alt="A picture of me" width="312" height="416" />
-		<p>I'm hosted with GitHub Pages.</p>
-		<address>
-			<!-- This is a link to my email -->
-			<p><a href="mailto:brainic777@gmail.com">
-			brainic777@gmail.com</a></p>
-		</address>
-		<!-- Linking using absolute URL -->
 		<a href="https://github.com/Brian-Pho">Github</a>
 		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
-		<!-- Linking using relative URL -->
-		<p>
-			<a href="index.html">Home</a></li>
-			<a href="about-me.html">About</a></li>
-			<a href="gallery.html">Gallery</a></li>
-			<a href="contact.html">Contact</a></li>
-		</p>
 	</body>
 </html>
