--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -2,23 +2,29 @@
 <html>
 	<head>
 		<!-- This is the title of the tab -->
-		<title>Brian Pho</title>
+		<title>Brian Pho Gallery</title>
+		<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho."/>
+		<meta name="KEYWORDS" content="Brian Pho, contact"/>
+		<!-- Using external CSS -->
+		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<hr />
-		<address>
-			<!-- This is a link to my email -->
-			<p>
-				<a href="mailto:brainic777@gmail.com">
-				brainic777@gmail.com
-				</a>
-			</p>
-		</address>
-		<!-- Linking using absolute URL -->
+		<!-- Linking using relative URL -->
+		<ul>
+				<li><a id="home" href="index.html">Home</a></li>
+				<li><a id="courses" href="couses.html">Courses</a></li>
+				<li><a id="projects" href="projects.html">Projects</a></li>
+				<li><a id="gallery" href="gallery.html">Gallery</a></li>
+				<li><a id="about" href="about.html">About</a></li>
+				<li><a id="contact" class="on" href="contact.html">Contact</a></li>
+		</ul>
+		<h1>Contact</h1>
 		<p>
-		<a href="https://www.facebook.com/BrianPho7">Facebook</a>
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
+			<a href="https://www.facebook.com/BrianPho7">Facebook</a>
+			<a href="https://github.com/Brian-Pho">Github</a>
+			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
 		</p>
 	</body>
 </html>
