--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -1,2 +1,28 @@
 <!DOCTYPE html>
-<img src="../images/brianpho.jpg" alt="A picture of me" width="312" height="416"/>
+<html>
+	<head>
+		<!-- This is the title of the tab -->
+		<title>Brian Pho Gallery</title>
+		<meta name="DESCRIPTION" content="This is pictures of Brian Pho."/>
+		<meta name="KEYWORDS" content="Brian Pho, pictures"/>
+		<!-- Using external CSS -->
+		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	</head>
+	<body>
+		<!-- Linking using relative URL -->
+		<ul>
+				<li><a id="home" href="index.html">Home</a></li>
+				<li><a id="courses" href="couses.html">Courses</a></li>
+				<li><a id="projects" href="projects.html">Projects</a></li>
+				<li><a id="gallery" class="on" href="gallery.html">Gallery</a></li>
+				<li><a id="about" href="about.html">About</a></li>
+				<li><a id="contact" href="contact.html">Contact</a></li>
+		</ul>
+		<h1>Gallery</h1>
+		<figure><img src="../images/brianpho.jpg" alt="A picture of me" width="312" height="416"/>
+			<figcaption>A picture of me</figcaption>
+		</figure>
+	</body>
+</html>
