--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,28 +8,30 @@
 		<!-- Using external CSS -->
 		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!-- Linking using relative URL -->
-		<p class="pages">
-			<a href="index.html">Home</a></li>
-			<a href="couses.html">Courses</a></li>
-			<a href="projects.html">Projects</a></li>
-			<a href="gallery.html">Gallery</a></li>
-			<a href="resume.html">Resume</a></li>
-			<a href="about.html">About</a></li>
-			<a href="contact.html">Contact</a></li>
-		</p>
-		<hr/>
-		<h1>Welcome to Brian Pho's Homepage</h1>
-		<p>
-			I am currently a software engineering student at the University of Calgary.
-			This website shows the past courses that I have taken, projects I have been involved with, and information
-			about me.
-		</p>
-		<p>
-			This website is currently hosted using Github Pages. The header font is Open Sans and the text font is Roboto. 
-			Thank you Google for providing the fonts.
-		</p>
+		<div class="wrapper">
+			<!-- Linking using relative URL -->
+			<ul>
+					<li><a id="home" class="on" href="index.html">Home</a></li>
+					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="projects" href="projects.html">Projects</a></li>
+					<li><a id="gallery" href="gallery.html">Gallery</a></li>
+					<li><a id="about" href="about.html">About</a></li>
+					<li><a id="contact" href="contact.html">Contact</a></li>
+			</ul>
+			<!-- <hr/> Divider line -->
+			<h1>Welcome to Brian Pho's Homepage</h1>
+			<p>
+				I am currently a software engineering student at the University of Calgary.
+				This website shows the past courses that I have taken, projects I have been involved with, and information
+				about me.
+			</p>
+			<p>
+				This website is currently hosted using Github Pages. The header font is Open Sans and the text font is Roboto. 
+				Thank you Google for providing the fonts.
+			</p>
+		</div>
 	</body>
 </html>
