--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -2,18 +2,24 @@
 <html>
 	<head>
 		<!-- This is the title of the tab -->
-		<title>Brian Pho</title>
+		<title>Brian Pho Projects</title>
+		<meta name="DESCRIPTION" content="These are the projects that Brian Pho has been involved in."/>
+		<meta name="KEYWORDS" content="Brian Pho, projects"/>
+		<!-- Using external CSS -->
+		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<hr />
-		<p>I'm hosted with GitHub Pages.</p>
-		<address>
-			<!-- This is a link to my email -->
-			<p><a href-"mailto:brainic777@gmail.com">
-			brainic777@gmail.com</a></p>
-		</address>
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
+		<!-- Linking using relative URL -->
+		<ul>
+				<li><a id="home" href="index.html">Home</a></li>
+				<li><a id="courses" href="couses.html">Courses</a></li>
+				<li><a id="projects" class="on" href="projects.html">Projects</a></li>
+				<li><a id="gallery" href="gallery.html">Gallery</a></li>
+				<li><a id="about" href="about.html">About</a></li>
+				<li><a id="contact" href="contact.html">Contact</a></li>
+		</ul>
+		<h1>Projects Involved In</h1>
 	</body>
 </html>
