--- a/HTML/about.html
+++ b/HTML/about.html
@@ -21,7 +21,8 @@
 				<li><a id="contact" href="contact.html">Contact</a></li>
 		</ul>
 		<h1>About Me</h1>
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<a href="https://www.linkedin.com/in/brian-pho/">LinkedIn</a>
+		<p>
+		[Insert Resume Here]
+		</p>
 	</body>
 </html>
