--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -20,6 +20,6 @@
 				<li><a id="about" href="about.html">About</a></li>
 				<li><a id="contact" href="contact.html">Contact</a></li>
 		</ul>
-		<h1>Projects Involved In</h1>
+		<h1>Projects</h1>
 	</body>
 </html>
