Testing margin changes

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -22,7 +22,10 @@
 		</ul>
 		<h1>About Me</h1>
 		<p>
-		[Insert Resume Here]
+			[Insert Resume Here]
+		</p>
+		<p>
+			Like philosophy, artificial intelligence, and gaming.
 		</p>
 	</body>
 </html>
