Added Brian Pho to the Top of the Site

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -12,14 +12,19 @@
 	</head>
 	<body>
 		<!-- Linking using relative URL -->
-		<ul>
-				<li><a id="home" href="index.html">Home</a></li>
-				<li><a id="courses" href="couses.html">Courses</a></li>
-				<li><a id="projects" class="on" href="projects.html">Projects</a></li>
-				<li><a id="gallery" href="gallery.html">Gallery</a></li>
-				<li><a id="about" href="about.html">About</a></li>
-				<li><a id="contact" href="contact.html">Contact</a></li>
-		</ul>
+		<header>
+		<h1 id="name">Brian Pho</h1>
+			<nav>
+				<ul>
+					<li><a id="home" href="index.html">Home</a></li>
+					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="projects" class="on" href="projects.html">Projects</a></li>
+					<li><a id="gallery" href="gallery.html">Gallery</a></li>
+					<li><a id="about" href="about.html">About</a></li>
+					<li><a id="contact" href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 		<h1>Projects</h1>
 	</body>
 </html>
