--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -12,14 +12,19 @@
 	</head>
 	<body>
 		<!-- Linking using relative URL -->
-		<ul>
-				<li><a id="home" href="index.html">Home</a></li>
-				<li><a id="courses" href="couses.html">Courses</a></li>
-				<li><a id="projects" href="projects.html">Projects</a></li>
-				<li><a id="gallery" class="on" href="gallery.html">Gallery</a></li>
-				<li><a id="about" href="about.html">About</a></li>
-				<li><a id="contact" href="contact.html">Contact</a></li>
-		</ul>
+		<header>
+		<h1 id="name">Brian Pho</h1>
+			<nav>
+				<ul>
+					<li><a id="home" href="index.html">Home</a></li>
+					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="projects" href="projects.html">Projects</a></li>
+					<li><a id="gallery" class="on" href="gallery.html">Gallery</a></li>
+					<li><a id="about" href="about.html">About</a></li>
+					<li><a id="contact" href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 		<h1>Gallery</h1>
 		<figure><img src="../images/brianpho.jpg" alt="A picture of me" width="312" height="416"/>
 			<figcaption>A picture of me</figcaption>
