--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,14 +13,19 @@
 	<body>
 		<div class="wrapper">
 			<!-- Linking using relative URL -->
-			<ul>
-					<li><a id="home" class="on" href="index.html">Home</a></li>
-					<li><a id="courses" href="couses.html">Courses</a></li>
-					<li><a id="projects" href="projects.html">Projects</a></li>
-					<li><a id="gallery" href="gallery.html">Gallery</a></li>
-					<li><a id="about" href="about.html">About</a></li>
-					<li><a id="contact" href="contact.html">Contact</a></li>
-			</ul>
+			<header>
+			<h1 id="name">Brian Pho</h1>
+				<nav>
+					<ul>
+						<li><a id="home" class="on" href="index.html">Home</a></li>
+						<li><a id="courses" href="couses.html">Courses</a></li>
+						<li><a id="projects" href="projects.html">Projects</a></li>
+						<li><a id="gallery" href="gallery.html">Gallery</a></li>
+						<li><a id="about" href="about.html">About</a></li>
+						<li><a id="contact" href="contact.html">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
 			<!-- <hr/> Divider line -->
 			<h1>Welcome to Brian Pho's Homepage</h1>
 			<p>
