--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -28,8 +28,8 @@
 		<h1>Contact</h1>
 		<p>
 			<a href="https://www.facebook.com/BrianPho7">Facebook</a>
-			<a href="https://github.com/Brian-Pho">Github</a>
 			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
+			<a href="mailto:brian.pho@ucalgary.ca">Email</a>
 		</p>
 	</body>
 </html>
