--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -26,5 +26,11 @@
 			</nav>
 		</header>
 		<h1>Projects</h1>
+		<a href="https://github.com/Brian-Pho">Github</a>
+		<h2>ENGG 233: Game</h2>
+		<h2>ENSF 409: Calculator</h2>
+		<h2>ENSF 409: Airlines Registration</h2>
+		<h2>CPSC 471: Library System</h2>
+		<h2>Personal: This Website</h2>
 	</body>
 </html>
