--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,7 +29,7 @@
 			<!-- <hr/> Divider line -->
 			<h1>Welcome to Brian Pho's Homepage</h1>
 			<p>
-				I am currently a software engineering student at the University of Calgary.
+				I am currently a 3rd year software engineering student at the University of Calgary.
 				This website shows the past courses that I have taken, projects I have been involved with, and information
 				about me.
 			</p>
