Added Paragraphs to Courses and Project Section

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -6,7 +6,7 @@
 		<meta name="DESCRIPTION" content="These are the projects that Brian Pho has been involved in."/>
 		<meta name="KEYWORDS" content="Brian Pho, projects"/>
 		<!-- Using external CSS -->
-		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="../CSS/projects.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -26,11 +26,42 @@
 			</nav>
 		</header>
 		<h1>Projects</h1>
-		<a href="https://github.com/Brian-Pho">Github</a>
-		<h2>ENGG 233: Game</h2>
-		<h2>ENSF 409: Calculator</h2>
-		<h2>ENSF 409: Airlines Registration</h2>
-		<h2>CPSC 471: Library System</h2>
-		<h2>Personal: This Website</h2>
+		<p>The following are projects that I have been involved in. The list is ordered from top down with the most recent project
+		at the top. Most projects have been a part of school courses but this website is a personal endeavor. My GitHub can be found
+		<a href="https://github.com/Brian-Pho"> here</a>.
+		<hr/>
+		</p>
+		<div class=projects>
+			<div id=website>
+				<h2>Personal: Github Pages Website</h2>
+				<p>fsdafdsafdsafdsa
+				</p>
+			</div>
+			<hr/>
+			<div id=library>
+			<h2>CPSC 471: Library System</h2>
+				<p>fsdafdsafdsafdsa
+				</p>
+			</div>
+			<hr/>
+			<div id=airline>
+			<h2>ENSF 409: Airlines Registration</h2>
+				<p>fsdafdsafdsafdsa
+				</p>
+			</div>
+			<hr/>
+			<div id=calculator>
+			<h2>ENSF 409: Calculator</h2>
+				<p>fsdafdsafdsafdsa
+				</p>
+			</div>
+			<hr/>
+			<div id=game>
+			<h2>ENGG 233: Game</h2>
+				<p>fsdafdsafdsafdsa
+				</p>
+			</div>
+			<hr/>
+		</div>
 	</body>
 </html>
