--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -26,6 +26,20 @@
 			</nav>
 		</header>
 		<h1>Courses Taken</h1>
+		<p>I am currently taking a bachelor of science with a major in software engineering. 
+		At the University of Calgary the semesters run as follows:
+			<u1>
+				<li>FALL: Sept - Dec (4 months)</li>
+				<li>WINTER: Jan - Apr (4 months)</li>
+				<li>SPRING: May - June (2 months)</li>
+				<li>SUMMER: July - Aug (2 months)</li>
+			</u1>
+		<br>
+		The current software engineering curriculum and course descriptions can be found
+		<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Notable courses have been highlighted 
+		in orange.
+		</p>
+		<hr/>
 		<div>
 			<table>
 				<thead>
@@ -47,7 +61,7 @@
 						<td>ENGG 319</td>
 					</tr>
 					<tr>
-						<td>ENGG 233</td>
+						<td class="notable">ENGG 233</td>
 						<td>ENGG 202</td>
 						<td>ENGG 481</td>
 						<td>COMS 363</td>
@@ -90,24 +104,24 @@
 					<tr>
 						<td>ENEL 353</td>
 						<td>ENEL 327</td>
-						<td>CPSC 457</td>
+						<td class="notable">CPSC 457</td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>ENCM 339</td>
-						<td>ENCM 369</td>
-						<td>CPSC 471</td>
+						<td class="notable">ENCM 339</td>
+						<td class="notable">ENCM 369</td>
+						<td class="notable">CPSC 471</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>MATH 375</td>
-						<td>CPSC 319</td>
+						<td class="notable">CPSC 319</td>
 						<td>ENGG 513</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>PHYS 365</td>
-						<td>ENSF 409</td>
+						<td class="notable">ENSF 409</td>
 						<td></td>
 						<td></td>
 					</tr>
@@ -147,13 +161,13 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td>ENEL 525</td>
+						<td class="notable">ENEL 525</td>
 						<td>SENG 471</td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>CPSC 441</td>
+						<td class="notable">CPSC 441</td>
 						<td>CPSC 313</td>
 						<td></td>
 						<td></td>
