--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,13 +29,16 @@
 			<!-- <hr/> Divider line -->
 			<h1>Welcome to Brian Pho's Homepage</h1>
 			<p>
-				I am currently a 3rd year software engineering student at the University of Calgary.
-				This website shows the past courses that I have taken, projects I have been involved with, and information
+				I am a 3rd year software engineering student at the University of Calgary.
+				This website shows the courses that I have taken, projects I have been involved with, and information
 				about me.
 			</p>
 			<p>
-				This website is currently hosted using Github Pages. The header font is Open Sans and the text font is Roboto. 
-				Thank you Google for providing the fonts.
+				<b>This website is currently in development (Last Updated July 24, 2017).</b>
+			</p>
+			<hr/>
+			<p>
+				This website is currently hosted using Github Pages. It is programmed in HTML and CSS. The header font is Open Sans and the text font is Roboto provided by Google Fonts. 
 			</p>
 		</div>
 	</body>
