Major Edits in the Project Section

--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -227,5 +227,7 @@
 				</tbody>
 			</table>
 		</div>
+		<!-- Add Back to Top Button here-->
+		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
 </html>
