--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -26,42 +26,86 @@
 			</nav>
 		</header>
 		<h1>Projects</h1>
-		<p>The following are projects that I have been involved in. The list is ordered from top down with the most recent project
-		at the top. Most projects have been a part of school courses but this website is a personal endeavor. My GitHub can be found
+		<p>The following are projects that I have been involved in. The list is ordered with the most recent project
+		at the top. By ordering the projects chronologically, the progress I've made can be seen. Most projects have been a part of school courses but this website is a personal endeavor. My GitHub can be found
 		<a href="https://github.com/Brian-Pho"> here</a>.
 		<hr/>
 		</p>
-		<div class=projects>
-			<div id=website>
+		<div>
+			<div id=website class=projects>
 				<h2>Personal: Github Pages Website</h2>
 				<p>fsdafdsafdsafdsa
 				</p>
 			</div>
 			<hr/>
-			<div id=library>
-			<h2>CPSC 471: Library System</h2>
-				<p>fsdafdsafdsafdsa
+			<div id=library class=projects>
+				<h2>CPSC 471: Library Database Management System</h2>
+				<p><a href="https://github.com/Brian-Pho/Library-App"> Source Code</a></p>
+				<p>
+					[FILL THIS IN]
 				</p>
+				<figure>
+					<img src="../images/library1.png" alt="Library 1" width="233" height="426"/>
+					<img src="../images/library2.png" alt="Library 2" width="233" height="426"/>
+					<img src="../images/library3.png" alt="Library 3" width="233" height="426"/>
+					<img src="../images/library4.png" alt="Library 4" width="233" height="426"/>
+					<img src="../images/library5.png" alt="Library 5" width="233" height="426"/>
+					<img src="../images/library6.png" alt="Library 6" width="233" height="426"/>
+					<img src="../images/library7.png" alt="Library 7" width="233" height="426"/>
+					<img src="../images/library8.png" alt="Library 8" width="233" height="426"/>
+					<img src="../images/library9.png" alt="Library 9" width="233" height="426"/>
+				</figure>
 			</div>
 			<hr/>
-			<div id=airline>
-			<h2>ENSF 409: Airlines Registration</h2>
-				<p>fsdafdsafdsafdsa
+			<div id=airline class=projects>
+				<h2>ENSF 409: Airlines Registration</h2>
+				<p><a href="https://github.com/Sadat21/AirlinesRegistrationSystem"> Source Code</a></p>
+				<p>
+					[FILL THIS IN]
 				</p>
+				<figure>
+					<img src="../images/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
+					<img src="../images/airlines2.png" alt="Airlines 2" width="523" height="340"/>
+					<img src="../images/airlines3.png" alt="Airlines 3" width="700" height="340"/>
+				</figure>
 			</div>
 			<hr/>
-			<div id=calculator>
-			<h2>ENSF 409: Calculator</h2>
-				<p>fsdafdsafdsafdsa
+			<div id=calculator class=projects>
+				<h2>ENSF 409: Calculator Android App</h2>
+				<p><a href="https://github.com/Sadat21/Calculator"> Source Code</a></p>
+				<p>
+					A generic calculator app for Android. This was my first experience working
+					with Android Studio and Java. There were many small quirks that we had to
+					incorporate such as division by zero, continually hitting equals, and
+					chaining operations.
 				</p>
+				<figure>
+					<img src="../images/calculator1.png" alt="Calculator 1" width="233" height="426"/>
+					<img src="../images/calculator2.png" alt="Calculator 2" width="233" height="426"/>
+					<img src="../images/calculator3.png" alt="Calculator 3" width="233" height="426"/>
+				</figure>
 			</div>
 			<hr/>
-			<div id=game>
-			<h2>ENGG 233: Game</h2>
-				<p>fsdafdsafdsafdsa
+			<div id=game class=projects>
+				<h2>ENGG 233: Ring Runner Game</h2>
+				<p><a href="https://github.com/Brian-Pho/Ring-Runner-Game"> Source Code</a></p>
+				<p>
+					My first major project after taking my first programming course in first year
+					engineering. The project I chose to do was an original game programmed in 
+					Processing; a simple language based on Java. A notable problem that I had to
+					solve when I was developing this game was trying to make the ball move in a
+					circular path. The solution was to use sin and cos for the y and x coordinate
+					of the ball. This made sense as the unit circle is described by trigonometric
+					functions.
 				</p>
+				<figure>
+					<img src="../images/ringrunner1.png" alt="Ring Runner 1" width="351" height="363.5"/>
+					<img src="../images/ringrunner2.png" alt="Ring Runner 2" width="351" height="363.5"/>
+					<img src="../images/ringrunner3.png" alt="Ring Runner 3" width="351" height="363.5"/>
+				</figure>
 			</div>
 			<hr/>
 		</div>
+		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
 </html>
