Completed Most of the Sections

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -14,23 +14,52 @@
 		<!-- Linking using relative URL -->
 		<header>
 		<h1 id="name">Brian Pho</h1>
-			<nav>
-				<ul>
-					<li><a id="home" href="index.html">Home</a></li>
-					<li><a id="courses" href="couses.html">Courses</a></li>
-					<li><a id="projects" href="projects.html">Projects</a></li>
-					<li><a id="gallery" href="gallery.html">Gallery</a></li>
-					<li><a id="about" class="on" href="about.html">About</a></li>
-					<li><a id="contact" href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
+		<nav>
+			<ul>
+				<li><a id="home" href="index.html">Home</a></li>
+				<li><a id="courses" href="couses.html">Courses</a></li>
+				<li><a id="projects" href="projects.html">Projects</a></li>
+				<li><a id="gallery" href="gallery.html">Gallery</a></li>
+				<li><a id="about" class="on" href="about.html">About</a></li>
+				<li><a id="contact" href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 		</header>
 		<h1>About Me</h1>
-		<p>
-			[Insert Resume Here]
+		<p id="quote">
+		<i>"The unexamined life is not worth living."</i><br>
+		- Socrates
 		</p>
+		<hr>
+		<h2>Resume</h2>
 		<p>
-			Like philosophy, artificial intelligence, and gaming.
+			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated: 2016)
 		</p>
+		<hr>
+		<h2>Hobbies</h2>
+		<ul>
+			<li>Reading</li>
+			<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
+			<li>Swimming</li>
+			<li>YouTube</li>
+			<li>Binge watching TV shows and anime</li>
+		</ul>
+		<hr>
+		<h2>Passions</h2>
+		<ul>
+			<li>Philosophy</li>
+			<li>Artificial Intelligence</li>
+			<li>Learning</li>
+			<li>Most of the sciences (except chemistry)</li>
+			<li>Helping people and humanity</li>
+		</ul>
+		<hr>
+		<h2>Random Skills</h2>
+		<ul>
+			<li>Building computers</li>
+			<li>Investing (index funds)</li>
+			<li>IT stuff (the family IT guy)</li>
+		</ul>
+		<hr>
 	</body>
 </html>
