--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -26,8 +26,9 @@
 			</nav>
 		</header>
 		<h1>Gallery</h1>
-		<figure><img src="../images/brianpho.jpg" alt="A picture of me" width="312" height="416"/>
-			<figcaption>A picture of me</figcaption>
+		<figure><img src="../images/brianpho1.jpg" alt="A picture of me" width="312" height="416"/>
+		<img src="../images/brianpho2.jpg" alt="A picture of me" width="360" height="480"/>
+		<img src="../images/brianpho3.jpg" alt="A picture of me" width="640" height="480"/>
 		</figure>
 	</body>
 </html>
