--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
 			<h1>Welcome to Brian Pho's Homepage</h1>
 			<p>
 				I am a 3rd year software engineering student at the University of Calgary.
-				This website shows the courses that I have taken, projects I have been involved with, and information
+				This website shows the courses I have taken, projects I have been involved with, and information
 				about me.
 			</p>
 			<p>
@@ -38,7 +38,7 @@
 			</p>
 			<hr/>
 			<p>
-				This website is currently hosted using Github Pages. It is programmed in HTML and CSS. The header font is Open Sans and the text font is Roboto provided by Google Fonts. 
+				This website is currently hosted using Github Pages.
 			</p>
 		</div>
 	</body>
