--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -34,7 +34,23 @@
 		<div>
 			<div id=website class=projects>
 				<h2>Personal: Github Pages Website</h2>
-				<p>fsdafdsafdsafdsa
+				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io"> Source Code</a></p>
+				<p>
+					This website, the one you're reading this on, is a personal project of mine that I am
+					making over my summer break. I wanted to make a website for multiple reasons. First reason was
+					to learn a new programming language (HTML and CSS in this case) and apply it immediately.
+					Second was because I am going to be applying for internships soon and having a website
+					is useful in showing my past projects and information about me. Third was because I love
+					programming and find it fun!
+				</p>
+				<p>
+					This is the first time I've programmed in HTML and it's very
+					different from the Java and C programming that I've previously done. HTML is very similar
+					to LaTeX, a language used for reports, so I learned it quickly. I also owe my knowledge to
+					the textbook <i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this 
+					textbook to learn HTML and it made it really easy for me to understand the concepts.
+					This website is currently hosted using Github Pages. The header 
+					font is Open Sans and the text font is Roboto provided by Google Fonts. 
 				</p>
 			</div>
 			<hr/>
@@ -42,7 +58,20 @@
 				<h2>CPSC 471: Library Database Management System</h2>
 				<p><a href="https://github.com/Brian-Pho/Library-App"> Source Code</a></p>
 				<p>
-					[FILL THIS IN]
+					While this project was part of my database class, it can be thought of as
+					a continuation and combination of my last two projects. This project was also
+					done in a group of three and I was assigned to do the UI aspect. For this project
+					my group had to create an app that connected to some database (mySQL) and retrieve
+					data from the database using SQL queries. This project was challenging because the project
+					required the use of multiple programming languages (Java, SQL, PHP, XML) and required the
+					use of an external server to host the data.
+				</p>
+				<p>
+					The purpose of this app was to allow library users to access the library database from the
+					app. Their were two different users, users and admins, with admins having additional 
+					functionalities. Their were a lot of functions that we had to incorporate such as
+					search, add, delete, and update which increased the complexity of the project. 
+					Overall, this project was very challenging but I learned a lot from it.
 				</p>
 				<figure>
 					<img src="../images/library1.png" alt="Library 1" width="233" height="426"/>
@@ -61,7 +90,17 @@
 				<h2>ENSF 409: Airlines Registration</h2>
 				<p><a href="https://github.com/Sadat21/AirlinesRegistrationSystem"> Source Code</a></p>
 				<p>
-					[FILL THIS IN]
+					This was my first project that involved the use of a database. This project was
+					done in a group of three where I was assigned the role of designing the UI for
+					the program. The UI was built using Java and IntelliJ. The purpose of this 
+					program is to connect to an external database (mySQL in this case) and relay
+					information back and forth from the client and server. 
+				</p>
+				<p>
+					There are two different types of users, clients and admins, both of which have different 
+					functionalities. The program allows users to book a flight and view the current flights 
+					to and from there destination. Admins are able to do whatever action the client can
+					but is also able to add and view all tickets.
 				</p>
 				<figure>
 					<img src="../images/airlines1.png" alt="Airlines 1" width="500" height="237.5"/>
