--- a/HTML/about.html
+++ b/HTML/about.html
@@ -33,7 +33,7 @@
 		<hr>
 		<h2>Resume</h2>
 		<p>
-			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated: 2016)
+			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated 2016)
 		</p>
 		<hr>
 		<h2>Hobbies</h2>
@@ -48,9 +48,10 @@
 		<h2>Passions</h2>
 		<ul>
 			<li>Philosophy</li>
+			<li>Psychology</li>
+			<li>Science</li>
 			<li>Artificial Intelligence</li>
 			<li>Learning</li>
-			<li>Most of the sciences (except chemistry)</li>
 			<li>Helping people and humanity</li>
 		</ul>
 		<hr>
