--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,7 +29,7 @@
 		<p>
 			<a href="https://www.facebook.com/BrianPho7">Facebook</a>
 			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
-			<a href="mailto:brian.pho@ucalgary.ca">Email</a>
+			<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)
 		</p>
 	</body>
 </html>
