--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -26,8 +26,8 @@
 			</nav>
 		</header>
 		<h1>Courses Taken</h1>
-		<p>I am currently taking a bachelor of science with a major in software engineering. 
-		At the University of Calgary the semesters run as follows:
+		<p>I am currently taking a bachelors of science with a major in software engineering. 
+		At the University of Calgary, the semesters run as follows:
 			<u1>
 				<li>FALL: Sept - Dec (4 months)</li>
 				<li>WINTER: Jan - Apr (4 months)</li>
@@ -87,6 +87,7 @@
 				</tbody>
 			</table>
 		</div>
+		<hr>
 		<div>
 			<table>
 				<thead>
@@ -134,6 +135,7 @@
 				</tbody>
 			</table>
 		</div>
+		<hr>
 		<div>
 			<table>
 				<thead>
@@ -181,6 +183,7 @@
 				</tbody>
 			</table>
 		</div>
+		<hr>
 		<div>
 			<table>
 				<thead>
@@ -227,6 +230,7 @@
 				</tbody>
 			</table>
 		</div>
+		<hr>
 		<!-- Add Back to Top Button here-->
 		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
