--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!-- Useful links for future reference
+	https://fonts.google.com/
+	https://www.w3schools.com/html/default.asp
+	http://www.htmldog.com/guides/css/intermediate/classid/
+	https://github.com/TimeTravel-1/Website
+ -->
 <html>
 	<head>
 		<!-- This is the title of the tab -->
