--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -31,6 +31,7 @@
 		<a href="https://github.com/Brian-Pho"> here</a>.
 		<hr/>
 		</p>
+		<!-- Find additional project colours here: http://www.tayloredmktg.com/rgb/ -->
 		<div>
 			<div id=website class=projects>
 				<h2>Personal: Github Pages Website</h2>
