Second Last Push (For Now)

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -53,6 +53,7 @@
 			<li>Artificial Intelligence</li>
 			<li>Learning</li>
 			<li>Helping people and humanity</li>
+			<li>EDM Music</li>
 		</ul>
 		<hr>
 		<h2>Random Skills</h2>
@@ -60,6 +61,7 @@
 			<li>Building computers</li>
 			<li>Investing (index funds)</li>
 			<li>IT stuff (the family IT guy)</li>
+			<li>Skin care</li>
 		</ul>
 		<hr>
 	</body>
