--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -27,8 +27,8 @@
 		</header>
 		<h1>Contact</h1>
 		<p>
-			<a href="https://www.facebook.com/BrianPho7">Facebook</a>
-			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a>
+			<a href="https://www.facebook.com/BrianPho7">Facebook</a><br>
+			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a><br>
 			<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)
 		</p>
 	</body>
