--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,12 +39,9 @@
 				This website shows the courses I have taken, projects I have been involved with, and information
 				about me.
 			</p>
-			<p>
-				<b>This website is currently in development (Last Updated July 24, 2017).</b>
-			</p>
 			<hr/>
 			<p>
-				This website is currently hosted using Github Pages.
+				This website is currently hosted using Github Pages. Last Updated July 24, 2017
 			</p>
 		</div>
 	</body>
