--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- This is the title of the tab -->
 		<title>Brian Pho About</title>
 		<meta name="DESCRIPTION" content="This is information about Brian Pho."/>
 		<meta name="KEYWORDS" content="Brian Pho, about"/>
-		<!-- Using external CSS -->
 		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!-- Linking using relative URL -->
 		<header>
-		<h1 id="name">Brian Pho</h1>
-		<nav>
-			<ul>
-				<li><a id="home" href="index.html">Home</a></li>
-				<li><a id="courses" href="couses.html">Courses</a></li>
-				<li><a id="projects" href="projects.html">Projects</a></li>
-				<li><a id="gallery" href="gallery.html">Gallery</a></li>
-				<li><a id="about" class="on" href="about.html">About</a></li>
-				<li><a id="contact" href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
+			<h1 id="name">Brian Pho</h1>
+			<nav>
+				<ul>
+					<li><a id="home" href="index.html">Home</a></li>
+					<li><a id="courses" href="couses.html">Courses</a></li>
+					<li><a id="projects" href="projects.html">Projects</a></li>
+					<li><a id="gallery" href="gallery.html">Gallery</a></li>
+					<li><a id="about" class="on" href="about.html">About</a></li>
+					<li><a id="contact" href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 		<h1>About Me</h1>
 		<p id="quote">
-		<i>"The unexamined life is not worth living."</i><br>
-		- Socrates
+			<i>"The unexamined life is not worth living."</i><br>
+			- Socrates
 		</p>
 		<hr>
 		<h2>Resume</h2>
-		<p>
-			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated 2016)
-		</p>
+		<p><a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated 2016)</p>
 		<hr>
 		<h2>Hobbies</h2>
 		<ul>
@@ -61,8 +56,8 @@
 			<li>Building computers</li>
 			<li>Investing (index funds)</li>
 			<li>IT stuff (the family IT guy)</li>
-			<li>Skin care</li>
 		</ul>
 		<hr>
+		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
 </html>
