--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- This is the title of the tab -->
 		<title>Brian Pho Gallery</title>
 		<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho."/>
 		<meta name="KEYWORDS" content="Brian Pho, contact"/>
-		<!-- Using external CSS -->
 		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!-- Linking using relative URL -->
 		<header>
-		<h1 id="name">Brian Pho</h1>
+			<h1 id="name">Brian Pho</h1>
 			<nav>
 				<ul>
 					<li><a id="home" href="index.html">Home</a></li>
@@ -29,7 +26,7 @@
 		<p>
 			<a href="https://www.facebook.com/BrianPho7">Facebook</a><br>
 			<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a><br>
-			<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)
+			<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)<br>
 		</p>
 	</body>
 </html>
