--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- This is the title of the tab -->
 		<title>Brian Pho Courses</title>
 		<meta name="DESCRIPTION" content="These are the courses that Brian Pho has taken."/>
 		<meta name="KEYWORDS" content="Brian Pho, courses"/>
-		<!-- Using external CSS -->
 		<link href="../CSS/courses.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!-- Linking using relative URL -->
 		<header>
-		<h1 id="name">Brian Pho</h1>
+			<h1 id="name">Brian Pho</h1>
 			<nav>
 				<ul>
 					<li><a id="home" href="index.html">Home</a></li>
@@ -26,212 +23,204 @@
 			</nav>
 		</header>
 		<h1>Courses Taken</h1>
-		<p>I am currently taking a bachelors of science with a major in software engineering. 
-		At the University of Calgary, the semesters run as follows:
+		<p>
+			I am currently taking a bachelors of science with a major in software engineering. 
+			At the University of Calgary, the semesters run as follows:
 			<u1>
 				<li>FALL: Sept - Dec (4 months)</li>
 				<li>WINTER: Jan - Apr (4 months)</li>
 				<li>SPRING: May - June (2 months)</li>
 				<li>SUMMER: July - Aug (2 months)</li>
 			</u1>
-		<br>
-		The current software engineering curriculum and course descriptions can be found
-		<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. Notable courses have been highlighted 
-		in orange.
+			<br>
+			The current software engineering curriculum and course descriptions can be found
+			<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. 
+			Notable courses have been highlighted in orange.
 		</p>
-		<hr/>
-		<div>
-			<table>
-				<thead>
-					<tr>
-						<th colspan="4">Year 1 (2015 - 2016)</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>FALL 2015</th>
-						<th>WINTER 2016</th>
-						<th>SPRING 2016</th>
-						<th>SUMMER 2016</th>
-					</tr>
-					<tr>
-						<td>ENGG 200</td>
-						<td>ENGG 201</td>
-						<td>ENGG 209</td>
-						<td>ENGG 319</td>
-					</tr>
-					<tr>
-						<td class="notable">ENGG 233</td>
-						<td>ENGG 202</td>
-						<td>ENGG 481</td>
-						<td>COMS 363</td>
-					</tr>
-					<tr>
-						<td>MATH 211</td>
-						<td>ENGG 225</td>
-						<td></td>
-						<td>MATH 271</td>
-					</tr>
-					<tr>
-						<td>MATH 275</td>
-						<td>MATH 277</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>CHEM 209</td>
-						<td>PHYS 259</td>
-						<td></td>
-						<td></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
 		<hr>
-		<div>
-			<table>
-				<thead>
-					<tr>
-						<th colspan="4" class="tabletitle">Year 2 (2016 - 2017)</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>FALL 2016</th>
-						<th>WINTER 2017</th>
-						<th>SPRING 2017</th>
-						<th>SUMMER 2017</th>
-					</tr>
-					<tr>
-						<td>ENEL 353</td>
-						<td>ENEL 327</td>
-						<td class="notable">CPSC 457</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td class="notable">ENCM 339</td>
-						<td class="notable">ENCM 369</td>
-						<td class="notable">CPSC 471</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>MATH 375</td>
-						<td class="notable">CPSC 319</td>
-						<td>ENGG 513</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>PHYS 365</td>
-						<td class="notable">ENSF 409</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>PHIL 279</td>
-						<td></td>
-						<td></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		<table>
+			<thead>
+				<tr>
+					<th colspan="4">Year 1 (2015 - 2016)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>FALL 2015</th>
+					<th>WINTER 2016</th>
+					<th>SPRING 2016</th>
+					<th>SUMMER 2016</th>
+				</tr>
+				<tr>
+					<td>ENGG 200</td>
+					<td>ENGG 201</td>
+					<td>ENGG 209</td>
+					<td>ENGG 319</td>
+				</tr>
+				<tr>
+					<td class="notable">ENGG 233</td>
+					<td>ENGG 202</td>
+					<td>ENGG 481</td>
+					<td>COMS 363</td>
+				</tr>
+				<tr>
+					<td>MATH 211</td>
+					<td>ENGG 225</td>
+					<td></td>
+					<td>MATH 271</td>
+				</tr>
+				<tr>
+					<td>MATH 275</td>
+					<td>MATH 277</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CHEM 209</td>
+					<td>PHYS 259</td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
 		<hr>
-		<div>
-			<table>
-				<thead>
-					<tr>
-						<th colspan="4" class="tabletitle">Year 3 (2017 - 2018)</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>FALL 2017</th>
-						<th>WINTER 2018</th>
-						<th>SPRING 2018</th>
-						<th>SUMMER 2018</th>
-					</tr>
-					<tr>
-						<td>ENSF 480</td>
-						<td>SENG 401</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>ENCM 511</td>
-						<td>SENG 438</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td class="notable">ENEL 525</td>
-						<td>SENG 471</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td class="notable">CPSC 441</td>
-						<td>CPSC 313</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>PHIL 473</td>
-						<td>PHIL 379</td>
-						<td></td>
-						<td></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		<table>
+			<thead>
+				<tr>
+					<th colspan="4" class="tabletitle">Year 2 (2016 - 2017)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>FALL 2016</th>
+					<th>WINTER 2017</th>
+					<th>SPRING 2017</th>
+					<th>SUMMER 2017</th>
+				</tr>
+				<tr>
+					<td>ENEL 353</td>
+					<td>ENEL 327</td>
+					<td class="notable">CPSC 457</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="notable">ENCM 339</td>
+					<td class="notable">ENCM 369</td>
+					<td class="notable">CPSC 471</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>MATH 375</td>
+					<td class="notable">CPSC 319</td>
+					<td>ENGG 513</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>PHYS 365</td>
+					<td class="notable">ENSF 409</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>PHIL 279</td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
 		<hr>
-		<div>
-			<table>
-				<thead>
-					<tr>
-						<th colspan="4" class="tabletitle">Year 4 (2018 - 2019)</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>FALL 2018</th>
-						<th>WINTER 2019</th>
-						<th>SPRING 2019</th>
-						<th>SUMMER 2019</th>
-					</tr>
-					<tr>
-						<td>SENG 511</td>
-						<td>SENG 533</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td colspan="2">ENEL 500</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>ENEL 592</td>
-						<td>ENEL 594</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>CPSC 433</td>
-						<td>CPSC 565</td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		<table>
+			<thead>
+				<tr>
+					<th colspan="4" class="tabletitle">Year 3 (2017 - 2018)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>FALL 2017</th>
+					<th>WINTER 2018</th>
+					<th>SPRING 2018</th>
+					<th>SUMMER 2018</th>
+				</tr>
+				<tr>
+					<td>ENSF 480</td>
+					<td>SENG 401</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>ENCM 511</td>
+					<td>SENG 438</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="notable">ENEL 525</td>
+					<td>SENG 471</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="notable">CPSC 441</td>
+					<td>CPSC 313</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>PHIL 473</td>
+					<td>PHIL 379</td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
 		<hr>
-		<!-- Add Back to Top Button here-->
+		<table>
+			<thead>
+				<tr>
+					<th colspan="4" class="tabletitle">Year 4 (2018 - 2019)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>FALL 2018</th>
+					<th>WINTER 2019</th>
+					<th>SPRING 2019</th>
+					<th>SUMMER 2019</th>
+				</tr>
+				<tr>
+					<td>SENG 511</td>
+					<td>SENG 533</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td colspan="2">ENEL 500</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>ENEL 592</td>
+					<td>ENEL 594</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>CPSC 433</td>
+					<td>CPSC 565</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
+		<hr>
 		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
 </html>
