--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- This is the title of the tab -->
 		<title>Brian Pho Gallery</title>
 		<meta name="DESCRIPTION" content="This is pictures of Brian Pho."/>
-		<meta name="KEYWORDS" content="Brian Pho, pictures"/>
-		<!-- Using external CSS -->
+		<meta name="KEYWORDS" content="Brian Pho, pictures, gallery"/>
 		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<!-- Linking using relative URL -->
 		<header>
-		<h1 id="name">Brian Pho</h1>
+			<h1 id="name">Brian Pho</h1>
 			<nav>
 				<ul>
 					<li><a id="home" href="index.html">Home</a></li>
@@ -26,9 +23,12 @@
 			</nav>
 		</header>
 		<h1>Gallery</h1>
-		<figure><img src="../images/brianpho1.jpg" alt="A picture of me" width="312" height="416"/>
-		<img src="../images/brianpho2.jpg" alt="A picture of me" width="360" height="480"/>
-		<img src="../images/brianpho3.jpg" alt="A picture of me" width="640" height="480"/>
+		<figure>
+			<img src="../images/brianpho1.jpg" alt="A picture of me" width="312" height="416"/>
+			<img src="../images/brianpho2.jpg" alt="A picture of me" width="360" height="480"/>
+			<img src="../images/brianpho3.jpg" alt="A picture of me" width="640" height="480"/>
 		</figure>
+		<hr>
+		<p id="backtotop"><a href="#top">Back to Top</a></p>
 	</body>
 </html>
