Updated with Suggestions from Harjee

--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -35,7 +35,8 @@
 			<br>
 			The current software engineering curriculum and course descriptions can be found
 			<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>. 
-			Notable courses have been highlighted in orange.
+			Notable courses for employers have been highlighted in orange. Courses such as
+			databases, operating systems, programming fundamentals.
 		</p>
 		<hr>
 		<table>
