Fixed Up Code and Colours

--- a/HTML/couses.html
+++ b/HTML/couses.html
@@ -214,7 +214,7 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td></td>
+					<td>[Undecided elective]</td>
 					<td></td>
 					<td></td>
 					<td></td>
