--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -4,7 +4,7 @@
 		<title>Brian Pho Gallery</title>
 		<meta name="DESCRIPTION" content="This is pictures of Brian Pho."/>
 		<meta name="KEYWORDS" content="Brian Pho, pictures, gallery"/>
-		<link href="../CSS/index.css" type="text/css" rel="stylesheet"/>
+		<link href="../CSS/base.css" type="text/css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
